--- a/TimeLineTest/TimelineControl.xaml
+++ b/TimeLineTest/TimelineControl.xaml
@@ -1,17 +1,19 @@
-<UserControl x:Class="TimeLineTest.TimelineControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:TimeLineTest"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             d:DesignHeight="450"
-             d:DesignWidth="800"
-             mc:Ignorable="d">
-  <Canvas x:Name="PART_Canvas"
-          Background="Black"
-          MouseDown="Canvas_MouseDown"
-          MouseLeftButtonDown="Canvas_MouseLeftButtonDown"
-          MouseLeftButtonUp="Canvas_MouseLeftButtonUp"
-          MouseMove="Canvas_MouseMove"
-          MouseWheel="Canvas_MouseWheel" />
+<UserControl
+    x:Class="TimeLineTest.TimelineControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TimeLineTest"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+    <Canvas
+        x:Name="PART_Canvas"
+        Background="Transparent"
+        MouseDown="Canvas_MouseDown"
+        MouseLeftButtonDown="Canvas_MouseLeftButtonDown"
+        MouseLeftButtonUp="Canvas_MouseLeftButtonUp"
+        MouseMove="Canvas_MouseMove"
+        MouseWheel="Canvas_MouseWheel" />
 </UserControl>
