- RecordingBar를 1시간 단위로 가져올 수 있게 수정

--- a/TimeLineTest/MainWindow.xaml
+++ b/TimeLineTest/MainWindow.xaml
@@ -13,6 +13,7 @@
     <local:TimelineControl
         x:Name="MyTimeLineControl"
         EndTime="{Binding MyEndTime}"
+        HourMaskList="{Binding MyHourMasks}"
         Recordings="{Binding MyRecordings}"
         SelectedTime="{Binding MySelectedTime, Mode=TwoWay}"
         StartTime="{Binding MyStartTime}" />
